# mw-api

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  render.yaml
.github/workflows/: backend.yml
app/: config.py  main.py
app/api/: leads.py
app/models/: lead.py
app/services/: email.py  supabase.py
supabase/: config.toml
supabase/migrations/: 20260420000001_create_leads_table.sql  20260420000002_leads_rls_policies.sql  20260420000003_leads_indexes.sql
tests/: test_leads.py
